--- a/notes-frontend/src/app/note-card/note-card.component.html
+++ b/notes-frontend/src/app/note-card/note-card.component.html
@@ -1,1 +1,17 @@
-<p>note-card works!</p>
+<div #container class="note-card-container">
+
+  <div class="note-card-content">
+    <h1 class="note-card-title">Lorem ipsum</h1>
+
+    <div class="note-card-body">
+      <p>Loren ipsum - this is the body.</p>
+      <div class="fade-out-truncation"></div>
+    </div>
+
+  </div>
+
+  <div class="x-button">
+
+  </div>
+
+</div>
