--- a/notes-frontend/src/app/pages/notes-list/notes-list.component.html
+++ b/notes-frontend/src/app/pages/notes-list/notes-list.component.html
@@ -13,6 +13,9 @@
 
   <div class="notes-list">
     <app-note-card></app-note-card>
+    <app-note-card></app-note-card>
+    <app-note-card></app-note-card>
+    <app-note-card></app-note-card>
   </div>
 
 
