Truncate long text on note-cards

--- a/notes-frontend/src/app/note-card/note-card.component.html
+++ b/notes-frontend/src/app/note-card/note-card.component.html
@@ -3,9 +3,10 @@
   <div class="note-card-content">
     <h1 class="note-card-title">Lorem ipsum</h1>
 
-    <div class="note-card-body">
+    <div #bodyText class="note-card-body">
       <p>Loren ipsum - this is the body.</p>
-      <div class="fade-out-truncation"></div>
+
+      <div #truncator class="fade-out-truncation"></div>
     </div>
 
   </div>
