--- a/notes-frontend/src/app/pages/notes-list/notes-list.component.html
+++ b/notes-frontend/src/app/pages/notes-list/notes-list.component.html
@@ -12,10 +12,9 @@
   </div>
 
   <div class="notes-list">
-    <app-note-card></app-note-card>
-    <app-note-card></app-note-card>
-    <app-note-card></app-note-card>
-    <app-note-card></app-note-card>
+    <app-note-card [title]="'First Card'" [body]="'This is the top card body'"></app-note-card>
+    <app-note-card [title]="'Second Card'" [body]="'This is the second card body'"></app-note-card>
+    <app-note-card [title]="'Third Card'" [body]="'This is the third card body'"></app-note-card>
   </div>
 
 
